test/tests/operators/sample/negative_period.txt
error: `period` must be a positive duration
 --> tests/operators/sample/negative_period.tql:6:8
  |
6 | sample -1s
  |        ^^^ 
  |
